@@ -1,0 +1,28 @@
+donrailsはproduction modeでの動作時には、
+cacheを活用することで、高速なアクセスを実現します。
+
+ただし、webrick以外のhttpdを使う場合にはhttpd側で設定が必要になります。
+
+* webrickの場合
+
+特に設定は必要ありません。
+
+手元のwebrickで動作させているときにはproduction.logに
+
+ Cached page: /notes/show_category/6.html (0.06772)
+
+みたいにCache宣言がされたうえで、
+次のアクセスではproduction.logにはあらわれず、
+webrickのlogのほうだけにアクセスlogが残ることで確認できます。
+
+* lighttpdの場合
+
+        url.rewrite = ( "^/$" => "index.html",
+                        "^([^.]+)$" => "$1.html"
+        )
+
+のような設定をします。
+
+* apacheの場合
+
+(未)
